# dataset-cloud-platform-faq

./: .gitignore  README.md  cleaner.py  cloud_faq_dataset.jsonl  data_cleaning.ipynb  dataset.py  pyproject.toml
data/raw/: ibm.html
data/raw/aws/: aws_links.txt  aws_main.html
data/raw/azure/: alias_link_map.json  azure_article_links.txt  azure_links.txt  azure_main.html
data/raw/gcp/: gcp_links.txt
data/raw/gcp/search/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
data/raw/hetzner/: hetzner_links.txt  part_of_main.html
data/raw/yandex_cloud/: main_page.html  yandex_cloud_links.txt  yandex_cloud_qa_links.txt
parsers/: aws_parser.py  azure_parser.py  gcp_parser.py  hetzner_parser.py  ibm_parser.py  yandex_cloud_parser.py
utils/aws/: aws_downloader.py  aws_hrefs_parser.py
utils/azure/: azure_article_downloader.py  azure_article_hrefs_parser.py  azure_downloader.py  azure_hrefs_parser.py
utils/gcp/: gcp_downloader.py  gcp_search_hrefs_parser.py
utils/hetzner/: hetzner_downloader.py  hetzner_hrefs_parser.py
utils/yandex_cloud/: yandex_cloud_downloader.py  yandex_cloud_hrefs_parser.py  yandex_cloud_qa_downloader.py  yandex_cloud_qa_hrefs_parser.py
