[tool.poetry]
name = "faq"
version = "0.1.0"
description = ""
authors = ["George Panchuk"]

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.10"
bs4 = "^0.0.1"
pandas = "^1.3.5"
tqdm = "^4.62.3"
requests = "^2.27.0"
notebook = "^6.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
